# world-radio-prefixes

./: README.md  prefixes.json  pyproject.toml  set_version.py
src/prefixes/: __init__.py  app.py  config.py
src/prefixes/output/: README.md  prefixes.json
src/prefixes/resources/: prefixes.csv  prefixes.xlsx
tests/: test_app.py
